tests/rosetta/out/C/apply-a-callback-to-an-array-2.c
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:56Z
// Generated by Mochi compiler v0.10.30 on 2025-07-18T17:11:56Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_int concat_list_int(list_int a, list_int b) {
  list_int r = list_int_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *_str(int v) {
  char *buf = (char *)malloc(32);
  sprintf(buf, "%d", v);
  return buf;
}
int _lambda0(int i) {
  char *tmp6 = _str(i * i);
  printf("%s\n", tmp6);
  return;
}

int _lambda1(int i) { return i * i; }

int _lambda2(int i) { return i * i; }

int each(list_int xs, void (*)(int) f) {
  for (int tmp1 = 0; tmp1 < xs.len; tmp1++) {
    int x = xs.data[tmp1];
    f(x);
  }
}

list_int Map(list_int xs, int (*)(int) f) {
  list_int r = list_int_create(0);
  for (int tmp2 = 0; tmp2 < xs.len; tmp2++) {
    int x = xs.data[tmp2];
    int tmp3_data[1];
    list_int tmp3 = {1, tmp3_data};
    tmp3.data[0] = f(x);
    list_int tmp4 = concat_list_int(r, tmp3);
    r = tmp4;
  }
  return r;
}

int mochi_main() {
  list_int s = list_int_create(5);
  s.data[0] = 1;
  s.data[1] = 2;
  s.data[2] = 3;
  s.data[3] = 4;
  s.data[4] = 5;
  list_int tmp5 = list_int_create(5);
  tmp5.data[0] = 1;
  tmp5.data[1] = 2;
  tmp5.data[2] = 3;
  tmp5.data[3] = 4;
  tmp5.data[4] = 5;
  each(tmp5, _lambda0);
  list_int tmp7 = list_int_create(5);
  tmp7.data[0] = 1;
  tmp7.data[1] = 2;
  tmp7.data[2] = 3;
  tmp7.data[3] = 4;
  tmp7.data[4] = 5;
  char *tmp8 = _str(Map(tmp7, _lambda1));
  list_int tmp9 = list_int_create(5);
  tmp9.data[0] = 1;
  tmp9.data[1] = 2;
  tmp9.data[2] = 3;
  tmp9.data[3] = 4;
  tmp9.data[4] = 5;
  char *tmp10 = _str(Map(tmp9, _lambda2));
  printf("%d\n", tmp10);
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
